# catstools

./: LICENSE.txt  MANIFEST.in  README.md  setup.cfg  tox.ini
catstools/: __init__.py  __main__.py  biomarker.py  cli.py  cna.py  common.py  snv.py  sv.py  validate.py
catstools/aggregation/: aggregation.py  convert_cats_data.py  main.py
catstools/aggregation/circos_plot/: circosplot.py
catstools/aggregation/gene_analysis_summary/: gene_analysis_plot.py  gene_analysis_plot_amino_acids.py  gene_analysis_plot_dna_cna.py  gene_analysis_plot_dna_except_fusion.py  gene_analysis_plot_dna_fusion.py
catstools/aggregation/onco_plot/: oncoplot.py
catstools/cBioPortal/: cats2portal.py  portal2cats.py  variant.py
catstools/formatupdate/: main.py  utils.py  v1_0_0.py  v1_0_1.py  v1_1_0.py  v1_2_0.py  v1_2_1.py
catstools/reference/: schema.json
samples/cBioPortal2cats/input/: data_clinical_sample.txt  data_cna_discrete.txt  data_expression.txt  data_snv.maf  data_structural_variants.txt  meta_clinical_sample.txt  meta_cna_discrete.txt  meta_expression.txt  meta_mutations_extended.txt  meta_sv.txt
samples/cBioPortal2cats/output/: output_cats_format.json
samples/cats2cBioPortal/input/: input_cats_format.json
samples/cats2cBioPortal/output/: data_clinical_patient.txt  data_clinical_sample.txt  data_cna_discrete.txt  data_expression.txt  data_fusion.txt  data_snv.vcf  data_sv.txt  meta_clinical_patient.txt  meta_clinical_sample.txt  meta_cna_discrete.txt  meta_expression.txt  meta_fusion.txt  meta_mutations_extended.txt  meta_study.txt  meta_sv.txt
(+74 files in other folders)
