[metadata]
name = catstools
version = attr: catstools.__version__
# url = 
# license_file = license.txt
# description = 
long_description = file: README.md

[options]
packages = catstools
include_package_data = True
zip_safe = False
install_requires=
    jsonschema==3.2.0
    pyliftover==0.4
    pysam==0.15.3

[options.entry_points]
console_scripts=
    catstools = catstools.cli:main

[options.extras_require]
test =
    tox
    pytest
    pytest-cov
    pytest-mock

[flake8]
max-line-length = 120

[isort]
line_length=120
multi_line_output=4

[tool:pytest]
testpaths = tests
addopts = -vv --durations=10

[mypy]
ignore_missing_imports = True
